# RUSnipeCord

./: Cargo.toml  README.md  config-ex.json
src/: dat.rs  main.rs
