[package]
name = "rusnipecord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webhook = "2.1.0"
reqwest = { version = "0.11.11", features = ["gzip", "json"] }
tokio = { version = "1.0", features = ["macros", "time"] }
serde = "1.0"
serde_json = "1.0"
serde_trim = "0.4.0"
env_logger = "0.9.0"
log = "0.4.17"
